<?xml version="1.0"?>
<package format="3">
  <name>ros_modbus</name>
  <version>1.0.0</version>
  <description>Basic node to command a Modbus device via TCP</description>

  <author email="alexis.fetet@capacites.fr">Alexis Fetet</author>
  <maintainer email="julien.viaud@capacites.fr">Julien Viaud</maintainer>

  <license>MIT</license>

  
  <!--
  <url type="website">TODO</url>
  <url type="repository">TODO</url>
  <url type="bugtracker">TODO</url>
  -->

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>libmodbus</depend>
  <depend>ros_modbus_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>libmodbus-dev</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
