<?xml version="1.0" ?>
<package format="3">
  <name>ros_modbus_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="todo@todo.todo">ecn</maintainer>
  <license>TODO: License declaration</license>

  <!--
  <url type="website">TODO</url>
  <url type="repository">TODO</url>
  <url type="bugtracker">TODO</url>
  -->
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
